# camAPP

./: .gitignore  Makefile  README.md  logitech_webcam_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  webcam_app.spec
