[project]
name = "camapp"
version = "0.1.0"
description = "Desktop app to preview a webcam and relay it to a virtual camera."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python==4.13.0.92",
    "PySide6==6.11.0",
    "pyvirtualcam==0.15.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller==6.19.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
